feature: Support kakao map roadview on service list search page
Identify duplicate kakao map & roadview functions, and refactor them
Refactoring for Naver map is incomplete, and must be reviewed before use
kakao map roadview is disabled on service register page

--- a/tools/webpack/webgis/views/partials/_header-service-register.html
+++ b/tools/webpack/webgis/views/partials/_header-service-register.html
@@ -99,8 +99,9 @@
         <!--begin::Toggle-->
         <button type="button"
                 class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
-                id="btn-map-roadview">
-          로드뷰
+                id="btn-map-roadview"
+                disabled>
+          <del>로드뷰</del>
         </button>
 
         <!--end::Toggle-->
@@ -192,15 +193,15 @@
                 <span class="navi-text">&nbsp;민원 등록</span>
               </a>
             </li>
-<!--            <li class="navi-item">-->
-<!--              <a href="#" class="navi-link" id="navi-search-link-1">-->
-<!--													<span class="navi-icon">-->
-<!--														<i class="la la-map-marked-alt icon-xl"></i>-->
-<!--													</span>-->
-<!--                <span class="navi-text">&nbsp;민원 현황 보기</span>-->
-<!--                <span class="label label-light-danger font-weight-bold label-inline">5</span>-->
-<!--              </a>-->
-<!--            </li>-->
+            <!--            <li class="navi-item">-->
+            <!--              <a href="#" class="navi-link" id="navi-search-link-1">-->
+            <!--													<span class="navi-icon">-->
+            <!--														<i class="la la-map-marked-alt icon-xl"></i>-->
+            <!--													</span>-->
+            <!--                <span class="navi-text">&nbsp;민원 현황 보기</span>-->
+            <!--                <span class="label label-light-danger font-weight-bold label-inline">5</span>-->
+            <!--              </a>-->
+            <!--            </li>-->
             <li class="navi-item">
               <a href="service/search" class="navi-link" id="navi-search-link-2">
 													<span class="navi-icon">
@@ -219,15 +220,15 @@
                 <span class="navi-text">&nbsp;비상근무 편성</span>
               </a>
             </li>
-<!--            <li class="navi-item">-->
-<!--              <form class="px-4 py-3">-->
-<!--                <div class="input-icon">-->
-<!--                  <input type="text" class="form-control" placeholder=""/>-->
-<!--                  <span><i class="la la-flash icon-lg"></i></span>-->
-<!--                </div>-->
-<!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
-<!--              </form>-->
-<!--            </li>-->
+            <!--            <li class="navi-item">-->
+            <!--              <form class="px-4 py-3">-->
+            <!--                <div class="input-icon">-->
+            <!--                  <input type="text" class="form-control" placeholder=""/>-->
+            <!--                  <span><i class="la la-flash icon-lg"></i></span>-->
+            <!--                </div>-->
+            <!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
+            <!--              </form>-->
+            <!--            </li>-->
           </ul>
 
           <!--end::Navigation-->
@@ -251,14 +252,14 @@
       <!--end::Quick panel-->
 
       <!--begin::User-->
-<!--      <div class="topbar-item">-->
-<!--        <button type="button"-->
-<!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
-<!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
-<!--                data-offset="0,10">-->
-<!--          사용자-->
-<!--        </button>-->
-<!--      </div>-->
+      <!--      <div class="topbar-item">-->
+      <!--        <button type="button"-->
+      <!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
+      <!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+      <!--                data-offset="0,10">-->
+      <!--          사용자-->
+      <!--        </button>-->
+      <!--      </div>-->
 
       <!--end::User-->
 
