--- a/tools/webpack/plugins/plugins.scss
+++ b/tools/webpack/plugins/plugins.scss
@@ -99,3 +99,6 @@
 
 // Fort Awesome. Build and manage icons and typefaces in a single place, then serve them with a single line of code: https://fortawesome.com/
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+// // jQuery contextMenu plugin: https://github.com/swisnl/jQuery-contextMenu
+@import "~jquery-contextmenu/dist/jquery.contextMenu.min.css";
