--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -66,8 +66,33 @@
 ////////////////////////////////////////////////////////////////
 
 #card_search_map {
+  border-style: solid;
+  border-top-style: none;
+  border-right-style: none;
+  border-left-style: none;
+  border-color: #0078D7;
+  border-width: 0.2rem;
+
+  #search_map_wrapper {
+    width: 100%;
+    height: 42.5vh;
+    position: relative;
+    overflow: hidden;
+    float: left;
+    transition: all 0.5s ease;
+
+    #search_map {
+      position: absolute;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      transition: all 0.5s ease;
+    }
+  }
+
   .ribbon-target {
-    bottom: 0;
+    bottom: -0.2rem;
     right: -0.3rem;
     box-shadow: none;
     border-style: solid;
@@ -77,37 +102,19 @@
     padding: 0.5rem;
 
     .btn {
-      padding: 0.5rem 0.75rem;
+      padding: 0.5rem 0.5rem;
     }
-  }
-
-  #search_map {
-    width: 100%;
-    height: 42.5vh;
-    transition: all 0.5s ease;
-    border-style: solid;
-    border-top-style: none;
-    border-right-style: none;
-    border-left-style: none;
-    border-color: #0078D7;
-    border-width: 0.2rem;
   }
 }
 
 #card_search {
   box-shadow: none;
 
-  #card_dist_map {
-    width: 100%;
-    height: 80vh;
-    border-radius: 5px;
-  }
-
   .card-body {
     .dataTables_wrapper {
       .row {
         width: auto;
-        margin: 5px 10px;
+        margin: 0 10px;
       }
 
       #kt_datatable_btn_group {
@@ -153,6 +160,15 @@
       td {
         white-space: nowrap;
         padding: 0.4rem;
+
+        .dtr-data {
+          white-space: pre-wrap;
+          justify-content: flex-start;
+        }
+      }
+
+      td:first-child {
+        padding-left: 0.5rem !important;
       }
     }
   }
