--- a/tools/webpack/webgis/views/partials/_content-service-search.html
+++ b/tools/webpack/webgis/views/partials/_content-service-search.html
@@ -3,9 +3,9 @@
   <!--begin::Container-->
   <div class="container-fluid p-0" id="container-search">
     <div class="card card-custom" id="card_search_map">
-      <div class="card-body ribbon ribbon-bottom p-0 parent" id="search_map_container" style="height: 100%;">
-        <div style="position: relative;width: 100%;height: 100%;overflow: hidden;float: left;">
-          <div id="search_map" class="child" style="overflow: hidden;z-index: 0;"></div>
+      <div class="card-body ribbon ribbon-bottom p-0 parent" id="card_body_search_map">
+        <div id="search_map_wrapper">
+          <div id="search_map" class="child"></div>
         </div>
         <div id="rvWrapper" class="child">
           <div id="map-roadview" style="height: 100%;"></div>
@@ -34,6 +34,8 @@
         <table class="table" id="kt_datatable">
           <thead class="thead-color">
           <tr>
+            <th>x</th>
+            <th>y</th>
             <th>번호</th>
             <th>접수자</th>
             <th>일자</th>
@@ -45,8 +47,7 @@
             <th>진행상태</th>
             <th>대행업체</th>
             <th>민원상세</th>
-            <th>x</th>
-            <th>y</th>
+            <th><!-- Button1 --></th>
           </tr>
           </thead>
         </table>
