fix: Remove textarea length limit from service register

--- a/tools/webpack/webgis/views/partials/_header-service-register.html
+++ b/tools/webpack/webgis/views/partials/_header-service-register.html
@@ -101,7 +101,7 @@
                 class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
                 id="btn-map-roadview"
                 disabled>
-          <del>로드뷰</del>
+          로드뷰
         </button>
 
         <!--end::Toggle-->
