--- a/tools/webpack/webgis/views/partials/_content-service-register.html
+++ b/tools/webpack/webgis/views/partials/_content-service-register.html
@@ -145,8 +145,7 @@
               <div class="form-group row">
                 <label class="col-lg-1 col-form-label text-nowrap">상세내용</label>
                 <div class="col-lg-11">
-                  <textarea class="form-control" name="apl_exp" rows="3" maxlength="120"
-                            placeholder="민원 상세 내용"></textarea>
+                  <textarea class="form-control" name="apl_exp" rows="4" placeholder="민원 상세 내용"></textarea>
                 </div>
               </div>
               <div class="separator separator-dashed my-6"></div>
