--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -170,6 +170,15 @@
       td:first-child {
         padding-left: 0.5rem !important;
       }
+
+      td.dtr-control:before {
+        font-size: larger;
+        font-weight: bolder;
+      }
+
+      .row-selected {
+        background-color: #0078D71A;
+      }
     }
   }
 
@@ -177,6 +186,11 @@
     border-radius: 0.5rem;
     display: none;
   }
+}
+
+.context-menu-item {
+  padding: 0.2em 2.5em !important;
+  margin: 0.3rem 0;
 }
 
 ////////////////////////////////////////////////////////////////
