feature: Update 'WTT_WSER_MA' table data by using jQuery context menu
Add new APIs to service.js router
Update row as "deleted" by adding a timestamp on the column 'del_ymd'
Re-add Sweetalert2 as a plugin to webpack bundle
Change database 'WFIS47210A' timezone to "Asia/Seoul"

--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -181,23 +181,31 @@
         }
       }
 
-      td {
-        white-space: nowrap;
-        padding: 0.4rem;
+      tr {
+        td {
+          white-space: nowrap;
+          padding: 0.4rem;
 
-        .dtr-data {
-          white-space: pre-wrap;
-          justify-content: flex-start;
+          .dtr-data {
+            white-space: pre-wrap;
+            justify-content: flex-start;
+          }
+        }
+
+        td:first-child {
+          padding-left: 0.5rem !important;
+        }
+
+        td.dtr-control:before {
+          font-size: larger;
+          font-weight: bolder;
         }
       }
 
-      td:first-child {
-        padding-left: 0.5rem !important;
-      }
-
-      td.dtr-control:before {
-        font-size: larger;
-        font-weight: bolder;
+      tr.tr-color {
+        td {
+          color: green;
+        }
       }
 
       .row-selected {
