--- a/tools/webpack/webgis/views/partials/_content-service-register.html
+++ b/tools/webpack/webgis/views/partials/_content-service-register.html
@@ -178,7 +178,7 @@
           </form>
           <!--end::Form-->
           <div class="overlay-layer bg-gray-o-75">
-            <div class="spinner spinner-track spinner-primary spinner-lg"></div>
+            <div class="spinner spinner-primary spinner-lg"></div>
           </div>
         </div>
         <!--end::Card-->
