--- a/tools/webpack/webgis/views/service-search.html
+++ b/tools/webpack/webgis/views/service-search.html
@@ -52,7 +52,7 @@
 
 <!--[html-partial:include:{"file":"partials/_extras/chat.html"}]/-->
 
-<!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->{{> _extras/scrolltop}}
+<!--[html-partial:include:{"file":"partials/_extras/scrolltop.html"}]/-->
 
 <!--[html-partial:include:{"file":"partials/_extras/toolbar.html"}]/-->
 
@@ -61,6 +61,8 @@
 {{> _modal/_sch-address}}
 
 {{> _modal/_pres-manage}}
+
+{{> _modal/_service-edit}}
 <script>
   var HOST_URL = 'https://preview.keenthemes.com/metronic/theme/html/tools/preview';
 </script>
