fix: Fix service register & search bugs
Register:
Properly show form validation status for bootstrap-select dropdowns

Search:
Add multi-selection & regex search to table column search filters
Refactor EditModal class as singleton to prevent duplicate API calls
Reset kakao map zoom level on opening EditModal
Fix kakao map zoom from getting stuck after calling #_onClickTableSearch

--- a/tools/webpack/webgis/views/partials/_content-service-register.html
+++ b/tools/webpack/webgis/views/partials/_content-service-register.html
@@ -85,10 +85,10 @@
                   </div>
                 </div>
                 <div class="col-lg-2" hidden>
-                  <input type="text" name="apl_hjd"/>
-                  <input type="text" name="apl_adr"/>
-                  <input type="text" name="x"/>
-                  <input type="text" name="y"/>
+                  <input type="text" class="form-control" name="apl_hjd"/>
+                  <input type="text" class="form-control" name="apl_adr"/>
+                  <input type="text" class="form-control" name="x"/>
+                  <input type="text" class="form-control" name="y"/>
                 </div>
               </div>
               <div class="separator separator-dashed my-6"></div>
