--- a/tools/webpack/webgis/views/partials/_modal/_service-edit.html
+++ b/tools/webpack/webgis/views/partials/_modal/_service-edit.html
@@ -81,10 +81,10 @@
                     </div>
                   </div>
                   <div class="col-lg-2" hidden>
-                    <input type="text" name="apl_hjd"/>
-                    <input type="text" name="apl_adr"/>
-                    <input type="text" name="x"/>
-                    <input type="text" name="y"/>
+                    <input type="text" class="form-control" name="apl_hjd"/>
+                    <input type="text" class="form-control" name="apl_adr"/>
+                    <input type="text" class="form-control" name="x"/>
+                    <input type="text" class="form-control" name="y"/>
                   </div>
                 </div>
                 <div class="separator separator-dashed my-6"></div>
@@ -160,7 +160,7 @@
                     </select>
                   </div>
                   <div class="col-lg-4 mb-1" style="display: flex;justify-content: flex-end">
-                    <button type="button" class="btn btn-primary font-weight-bolder pl-6 pr-6"
+                    <button type="button" class="btn btn-primary font-weight-bold pl-6 pr-6"
                             id="kt_service_edit_submit">
                       <i class="la la-check-circle"></i> 저장
                     </button>
