--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -51,6 +51,14 @@
 
   .card-body {
     background: none;
+
+    .bootstrap-select.is-valid .btn.dropdown-toggle {
+      border-color: #1BC5BD !important;
+    }
+
+    .bootstrap-select.is-invalid .btn.dropdown-toggle {
+      border-color: #F64E60 !important;
+    }
   }
 
   .card-footer {
@@ -75,7 +83,7 @@
 
   #search_map_wrapper {
     width: 100%;
-    height: 42.5vh;
+    height: 44vh;
     position: relative;
     overflow: hidden;
     float: left;
@@ -102,6 +110,8 @@
     padding: 0.5rem;
 
     .btn {
+      display: flex;
+      align-items: center;
       padding: 0.5rem 0.5rem;
     }
   }
@@ -203,9 +213,15 @@
       }
 
       tr.tr-color {
+        background-color: #0080001A;
+
         td {
-          color: green;
+          color: darkgreen;
         }
+      }
+
+      tr.tr-color.row-selected {
+        background-color: #0078D740;
       }
 
       .row-selected {
