--- a/tools/webpack/webgis/views/partials/_content-service-search.html
+++ b/tools/webpack/webgis/views/partials/_content-service-search.html
@@ -11,20 +11,20 @@
           <div id="map-roadview" style="height: 100%;"></div>
         </div>
         <div class="ribbon-target bg-white">
-          <a href="javascript:;" class="btn btn-outline-info border-0 font-weight-bolder"
+          <a href="javascript:;" class="btn btn-sm btn-outline-info border-0 font-weight-bolder"
              id="kt_datatable_search">
-            <span class="label label-inline label-danger font-weight-bolder mr-1" hidden></span>
+            <span class="label label-inline label-danger font-weight-bolder mr-2" hidden></span>
             <i class="fas fa-search"></i> 검색
           </a>
-          <a href="javascript:;" class="btn btn-outline-danger border-0 font-weight-bolder ml-1"
+          <a href="javascript:;" class="btn btn-sm btn-outline-danger border-0 font-weight-bolder ml-1"
              id="kt_datatable_clear">
             <i class="fas fa-times"></i> 초기화
           </a>
-          <a href="javascript:;" class="btn btn-outline-primary border-0 font-weight-bolder ml-1"
+          <a href="javascript:;" class="btn btn-sm btn-outline-primary border-0 font-weight-bolder ml-1"
              id="kt_datatable_map">
             <i class="fas fa-sort"></i> 지도
           </a>
-          <a href="javascript:;" class="btn btn-outline-success border-0 font-weight-bolder ml-1"
+          <a href="javascript:;" class="btn btn-sm btn-outline-success border-0 font-weight-bolder ml-1"
              id="kt_datatable_refresh">
             <i class="fas fa-sync-alt"></i>
           </a>
