fix: Minor bug fixes & enhancement on service list search datatable
Fix aside menu & event listener where layer could not be toggled
Move service table data export button from context menu to table header
Do not highlight entire row, but some key texts (처리완료) in the cell
Add checkboxes to individual rows for selecting rows in the table

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -170,7 +170,7 @@
                   </i>
                   <span class="menu-text ml-2">상수관말</span>
                   <span class="menu-label">
-                    <i class="ol-table-code-wtl" id="wtl_cap_ps"></i>
+                    <i class="ol-table-code-wtl" id="viw_wtl_cap_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
@@ -422,7 +422,7 @@
                   </i>
                   <span class="menu-text">사용자주기</span>
                   <span class="menu-label">
-                    <i class="ol-table-code-wtl" id="wtl_userlabel_ps"></i>
+                    <i class="ol-table-code-wtl" id="viw_wtl_userlabel_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
