--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -83,7 +83,7 @@
 
   #search_map_wrapper {
     width: 100%;
-    height: 44vh;
+    height: 43vh;
     position: relative;
     overflow: hidden;
     float: left;
@@ -141,14 +141,14 @@
 
     #kt_datatable {
       margin: 0 !important;
-
       thead {
         th {
           color: #0078D7;
           font-weight: bolder;
           white-space: nowrap;
-          padding: 0.5rem 0.5rem 0.25rem 0.5rem;
+          padding: 0.5rem 0.75rem 0.25rem 0.75rem;
           border-bottom-color: transparent;
+          max-width: fit-content;
         }
 
         .filter {
@@ -167,11 +167,9 @@
         }
 
         #yadcf-filter-wrapper--kt_datatable_daterange {
-          width: 11rem;
+          max-width: min-content;
 
           .yadcf-filter-wrapper {
-            width: fit-content;
-
             .yadcf-filter-wrapper-inner {
               border: none;
             }
@@ -194,7 +192,8 @@
       tr {
         td {
           white-space: nowrap;
-          padding: 0.4rem;
+          padding: 0.4rem 1.5rem 0.4rem 1rem;
+          margin: 0;
 
           .dtr-data {
             white-space: pre-wrap;
@@ -212,21 +211,19 @@
         }
       }
 
-      tr.tr-color {
-        background-color: #0080001A;
-
-        td {
-          color: darkgreen;
-        }
+      tr.selected td {
+        background-color: #0078D733;
       }
 
-      tr.tr-color.row-selected {
-        background-color: #0078D740;
+      .text-blue {
+        color: blue;
+        font-weight: bolder;
       }
+    }
 
-      .row-selected {
-        background-color: #0078D740;
-      }
+    #daterange {
+      width: 1px !important;
+      max-width: min-content !important;
     }
   }
 
