--- a/tools/webpack/webgis/views/partials/_content-service-search.html
+++ b/tools/webpack/webgis/views/partials/_content-service-search.html
@@ -24,10 +24,28 @@
              id="kt_datatable_map">
             <i class="fas fa-sort"></i> 지도
           </a>
-          <a href="javascript:;" class="btn btn-sm btn-outline-success border-0 font-weight-bolder ml-1"
-             id="kt_datatable_refresh">
-            <i class="fas fa-sync-alt"></i>
-          </a>
+          <div class="dropdown dropdown-inline dropleft ml-1">
+            <a href="#" class="btn btn-sm btn-outline-primary border-0 font-weight-bolder"
+               data-toggle="dropdown" data-offset="0,3">
+              <i class="fas fa-download"></i> 출력
+            </a>
+            <div class="dropdown-menu dropdown-menu-sm-right border border-primary">
+              <ul class="navi">
+                <li class="navi-item">
+                  <a class="navi-link active" href="javascript:;" id="kt_datatable_print">
+                    <span class="navi-icon"><i class="fas fa-print text-primary"></i></span>
+                    <span class="navi-text">인쇄</span>
+                  </a>
+                </li>
+                <li class="navi-item">
+                  <a class="navi-link" href="javascript:;" id="kt_datatable_excel">
+                    <span class="navi-icon"><i class="far fa-file-excel text-success"></i></span>
+                    <span class="navi-text">엑셀 저장</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -38,8 +56,7 @@
         <table class="table" id="kt_datatable">
           <thead class="thead-color">
           <tr>
-            <th>x</th>
-            <th>y</th>
+            <th></th>
             <th>번호</th>
             <th>접수자</th>
             <th>일자</th>
