refactor: Rename Metronic default DOM ids

--- a/tools/webpack/webgis/stylesheet/service.scss
+++ b/tools/webpack/webgis/stylesheet/service.scss
@@ -14,7 +14,7 @@
 
 ////////////////////////////////////////////////////////////////
 
-#exampleModal, #exampleModal2 {
+#serv_sche_modal, #serv_pres_modal {
   .modal-header {
     padding: 1rem 1rem;
   }
