--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -170,7 +170,7 @@
           <!-- TODO: 구별이 쉽게 선택한 메뉴에 primary color 배경을 적용 -->
           <!--begin::Navigation-->
           <ul class="navi navi-hover navi-active navi-accent py-3">
-            <li class="navi-item" data-toggle="modal" data-target="#exampleModal2">
+            <li class="navi-item" data-toggle="modal" data-target="#serv_pres_modal">
               <a href="javascript:;" class="navi-link">
 													<span class="navi-icon">
 														<i class="la la-file-text icon-xl"></i>
@@ -251,7 +251,7 @@
             </li>
             <div class="separator separator-dashed my-3"></div>
             <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">근무</li>
-            <li class="navi-item" data-toggle="modal" data-target="#exampleModal">
+            <li class="navi-item" data-toggle="modal" data-target="#serv_sche_modal">
               <a href="javascript:;" class="navi-link">
 													<span class="navi-icon">
 														<i class="la la-calendar icon-xl"></i>
