--- a/tools/webpack/webgis/views/partials/_modal/_pres-manage.html
+++ b/tools/webpack/webgis/views/partials/_modal/_pres-manage.html
@@ -1,5 +1,5 @@
 <!-- Modal-->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModal2Label"
+<div class="modal fade" id="serv_pres_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModal2Label"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
