--- a/tools/webpack/webgis/views/partials/_modal/_sch-address.html
+++ b/tools/webpack/webgis/views/partials/_modal/_sch-address.html
@@ -1,5 +1,5 @@
 <!-- Modal-->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="serv_sche_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-xl" role="document">
     <div class="modal-content">
