feature: Setup layers 'BML_BADM_AS','BML_HADM_AS' and 'GEO_LINE_AS'
Vector: 'BML_BADM_AS' and 'BML_HADM_AS'
Tile: 'GEO_LINE_AS'

--- a/tools/webpack/webgis/views/partials/_content-service-search.html
+++ b/tools/webpack/webgis/views/partials/_content-service-search.html
@@ -27,19 +27,19 @@
           <div class="dropdown dropdown-inline dropleft ml-1">
             <a href="#" class="btn btn-sm btn-outline-primary border-0 font-weight-bolder"
                data-toggle="dropdown" data-offset="0,3">
-              <i class="fas fa-download"></i> 출력
+              <i class="flaticon-download-1"></i> 출력
             </a>
             <div class="dropdown-menu dropdown-menu-sm-right border border-primary">
               <ul class="navi">
                 <li class="navi-item">
                   <a class="navi-link active" href="javascript:;" id="kt_datatable_print">
-                    <span class="navi-icon"><i class="fas fa-print text-primary"></i></span>
+                    <span class="navi-icon"><i class="flaticon2-printer text-primary"></i></span>
                     <span class="navi-text">인쇄</span>
                   </a>
                 </li>
                 <li class="navi-item">
                   <a class="navi-link" href="javascript:;" id="kt_datatable_excel">
-                    <span class="navi-icon"><i class="far fa-file-excel text-success"></i></span>
+                    <span class="navi-icon"><i class="flaticon2-file text-success"></i></span>
                     <span class="navi-text">엑셀 저장</span>
                   </a>
                 </li>
