refactor: Delete due TODOs

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -231,7 +231,7 @@
               <!--                <a href="javascript:;" class="menu-link menu-toggle">-->
               <!--                  <i class="menu-bullet">-->
               <!--                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;-->
-              <!--                    <img src="assets/media/symbols/SA005.png">&lt;!&ndash; TODO: 아이콘 정리 &ndash;&gt;-->
+              <!--                    <img src="assets/media/symbols/SA005.png">&lt;!&ndash;&ndash;&gt;-->
               <!--                  </i>-->
               <!--                  <span class="menu-text ml-2">편락관</span>-->
               <!--                  <span class="menu-label">-->
