fix: Fix photo modal setup for layer '보수공사'
Edit view table code for calling image data from MySQL DB
Remove duplicate DOM id for event listeners to handle events correctly

--- a/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
@@ -18,7 +18,7 @@
         <!--end::Header-->
         <div class="card-body">
           <div
-              id="carouselExampleCaptions"
+              id="carouselExampleCaptions2"
               class="carousel"
               data-ride="false"
               data-interval="false"
@@ -45,7 +45,7 @@
             </div>
             <a
                 class="carousel-control-prev"
-                href="#carouselExampleCaptions"
+                href="#carouselExampleCaptions2"
                 role="button"
                 data-slide="prev"
             >
@@ -57,7 +57,7 @@
             </a>
             <a
                 class="carousel-control-next"
-                href="#carouselExampleCaptions"
+                href="#carouselExampleCaptions2"
                 role="button"
                 data-slide="next"
             >
