--- a/tools/webpack/webgis/views/partials/_modal/_ol-history.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-history.html
@@ -52,7 +52,7 @@
                   <div class="carousel-item">
                     <img
                         src="/assets/media/bg/bg-yeongju.png"
-                        class="d-block w-100 rounded"
+                        class="rounded img-fluid"
                         alt="..."
                     />
                     <div class="carousel-caption d-none d-md-block">
