--- a/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
@@ -1,6 +1,6 @@
 <!--begin::Chat Panel-->
 <div class="modal fade" id="kt_photo_modal" role="dialog" data-backdrop="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <!--begin::Card-->
       <div class="card card-custom">
@@ -27,7 +27,7 @@
               <div class="carousel-item">
                 <img
                     src="/assets/media/bg/bg-yeongju.png"
-                    class="d-block"
+                    class="img-fluid"
                     alt="..."
                 />
                 <div class="carousel-caption d-none d-md-block">
