feature: Setup '경계변', '감압변', '상수맨홀', '표고점' layers
Use Image layer and ImageWMS source instead of Tile & TileWMS

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -63,6 +63,19 @@
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
+                    <i class="fas fa-mountain" style="color: #0BB7AF"></i>
+                  </i>
+                  <span class="menu-text ml-2">표고점</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-geo fas fa-times-circle text-danger icon-lg"
+                       id="n3p_f0020000"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
                     <i class="fas fa-border-style icon-lg" style="color: #0000a0"></i>
                   </i>
                   <span class="menu-text ml-2">지적선 및 지번</span>
@@ -343,19 +356,19 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">-->
-              <!--                <a href="javascript:;" class="menu-link menu-toggle">-->
-              <!--                  <i class="menu-bullet">-->
-              <!--                    &lt;!&ndash;                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>&ndash;&gt;-->
-              <!--                    <img src="assets/media/symbols/SA211_SCV.png">-->
-              <!--                  </i>-->
-              <!--                  <span class="menu-text ml-2">스케일부스터</span>-->
-              <!--                  <span class="menu-label">-->
-              <!--                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_scvst_ps"></i>-->
-              <!--                  </span>-->
-              <!--                  <i class="menu-arrow" style="color: transparent;"></i>-->
-              <!--                </a>-->
-              <!--              </li>-->
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <!--                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>-->
+                    <img src="assets/media/symbols/SA100.png">
+                  </i>
+                  <span class="menu-text ml-2">상수맨홀</span>
+                  <span class="menu-label">
+                                  <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_manh_ps"></i>
+                                </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
               <li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -435,17 +448,6 @@
                     <li class="menu-item" aria-haspopup="true">
                       <a href="javascript:;" class="menu-link">
                         <i class="menu-bullet">
-                          <img src="assets/media/symbols/SA204.png">
-                        </i>
-                        <span class="menu-text ml-2">감압변</span>
-                        <!--                        <span class="menu-label">-->
-                        <!--                          <i class="ol-table-code ol-table-code-wtl"></i>-->
-                        <!--                        </span>-->
-                      </a>
-                    </li>
-                    <li class="menu-item" aria-haspopup="true">
-                      <a href="javascript:;" class="menu-link">
-                        <i class="menu-bullet">
                           <img src="assets/media/symbols/SA202.png">
                         </i>
                         <span class="menu-text ml-2">이토변</span>
@@ -454,7 +456,7 @@
                         <!--                        </span>-->
                       </a>
                     </li>
-                    <!--                    <li class="menu-item" aria-haspopup="true">-->
+<!--                    <li class="menu-item" aria-haspopup="true">-->
                     <!--                      <a href="javascript:;" class="menu-link">-->
                     <!--                        <i class="menu-bullet">-->
                     <!--                          <span></span>-->
@@ -467,6 +469,30 @@
                     <!--                    </li>-->
                   </ul>
                 </div>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <img src="assets/media/symbols/SA204.png">
+                  </i>
+                  <span class="menu-text ml-2">감압변</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_valv_pres_ps"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <img src="assets/media/symbols/SA199_B.png">
+                  </i>
+                  <span class="menu-text ml-2">경계변</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_valv_block_ps"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
               </li>
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
