feature: Setup '물방향' (VIW_WTL_PIPE_DIR_PS) layer
Exclude the layer from openlayers select interaction

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -265,17 +265,18 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <!--              <li class="menu-item" aria-haspopup="true">-->
-              <!--                <a href="custom/apps/inbox.html" class="menu-link">-->
-              <!--                  <i class="menu-bullet menu-bullet-line">-->
-              <!--                    <span></span>-->
-              <!--                  </i>-->
-              <!--                  <span class="menu-text">Inbox</span>-->
-              <!--                  <span class="menu-label">-->
-              <!--														<span class="label label-danger label-inline">new</span>-->
-              <!--													</span>-->
-              <!--                </a>-->
-              <!--              </li>-->
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <img src="assets/media/symbols/SA006.png">
+                  </i>
+                  <span class="menu-text ml-2">물방향</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pipe_dir_ps"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
             </ul>
           </div>
         </li>
@@ -456,7 +457,7 @@
                         <!--                        </span>-->
                       </a>
                     </li>
-<!--                    <li class="menu-item" aria-haspopup="true">-->
+                    <!--                    <li class="menu-item" aria-haspopup="true">-->
                     <!--                      <a href="javascript:;" class="menu-link">-->
                     <!--                        <i class="menu-bullet">-->
                     <!--                          <span></span>-->
