feature: Filter 'WTL_PIPE_LM' layer by the column 'IST_YMD' (설치일자)
https://openlayers.org/en/latest/apidoc/module-ol_format_filter.html
Send serialized XML request to GeoServer along with filter conditions

--- a/tools/webpack/plugins/plugins.scss
+++ b/tools/webpack/plugins/plugins.scss
@@ -36,7 +36,7 @@
 @import "~bootstrap-timepicker/css/bootstrap-timepicker.css";
 
 // Bootstrap Daterangepicker
-@import "~bootstrap-daterangepicker/daterangepicker.css";
+//@import "~bootstrap-daterangepicker/daterangepicker.css";
 
 // Bootstrap Touchspin
 //@import "~bootstrap-touchspin/dist/jquery.bootstrap-touchspin.css";
@@ -51,10 +51,10 @@
 @import "~select2/dist/css/select2.css";
 
 // Ion Rangeslider - Is an easy, flexible and responsive range slider with tons of options: http://ionden.com/a/plugins/ion.rangeSlider/
-@import "~ion-rangeslider/css/ion.rangeSlider.css";
+//@import "~ion-rangeslider/css/ion.rangeSlider.css";
 
 // noUiSlider - is a lightweight range slider with multi-touch support and a ton of features. It supports non-linear ranges, requires no external dependencies: https://refreshless.com/nouislider/
-@import "~nouislider/distribute/nouislider.css";
+//@import "~nouislider/distribute/nouislider.css";
 
 // Owl Carousel - Touch enabled jQuery plugin that lets you create a beautiful responsive carousel slider: https://owlcarousel2.github.io/OwlCarousel2/
 @import "~owl.carousel/dist/assets/owl.carousel.css";
