--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -189,18 +189,64 @@
         <!--end::Toggle-->
 
         <!--begin::Dropdown-->
-        <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-md">
+        <div class="dropdown-menu dropdown-menu-sm p-0 m-0 dropdown-menu-right dropdown-menu-anim-up">
 
           <!--begin::Navigation-->
-          <ul class="navi navi-hover navi-active navi-accent py-3">
+          <ul class="navi navi-hover navi-active navi-accent py-3" id="viw_wtl_pipe_lm_filter">
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">가압장</li>
             <li class="navi-item" data-toggle="modal" data-target="#serv_pres_modal">
-              <a href="javascript:;" class="navi-link">
-													<span class="navi-icon">
-														<i class="la la-file-text icon-xl"></i>
-													</span>
+              <a href="javascript:;" class="navi-link" style="white-space: nowrap">
+                <span class="navi-bullet">
+                <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;가압장 관리업체 현황</span>
               </a>
             </li>
+            <div class="separator separator-dashed my-2"></div>
+            <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">상수관로</li>
+            <li class="navi-item">
+              <a href="javascript:;" class="navi-link">
+                <span class="navi-text text-danger font-weight-bolder" title="-1">&nbsp;초기화</span>
+              </a>
+            </li>
+            <li class="navi-item">
+              <a href="javascript:;" class="navi-link">
+                <span class="navi-text" title="5">&nbsp;5 년 이상</span>
+              </a>
+            </li>
+            <li class="navi-item">
+              <a href="javascript:;" class="navi-link">
+                <span class="navi-text" title="10">&nbsp;10 년 이상</span>
+              </a>
+            </li>
+            <li class="navi-item">
+              <a href="javascript:;" class="navi-link">
+                <span class="navi-text" title="15">&nbsp;15 년 이상</span>
+              </a>
+            </li>
+            <li class="navi-item">
+              <a href="javascript:;" class="navi-link">
+                <span class="navi-text" title="20">&nbsp;20 년 이상</span>
+              </a>
+            </li>
+            <form class="form m-2 pl-5 pr-5">
+              <label class="text-primary font-weight-bolder">직접 지정...</label>
+              <div class="form-group form-group-sm row mb-2">
+                <div class="col-6 pl-0 pr-1">
+                  <input class="form-control form-control-sm kt_inputmask_range" name="begin" placeholder="시작 연도"
+                         type="text">
+                </div>
+                <div class="col-6 pl-1 pr-0">
+                  <input class="form-control form-control-sm kt_inputmask_range" name="end" placeholder="끝 연도"
+                         type="text">
+                </div>
+              </div>
+              <div class="form-group form-group-sm row mb-0">
+                <button type="button" class="btn btn-sm btn-block btn-light-primary font-weight-bolder p-2">
+                  적용
+                </button>
+              </div>
+            </form>
           </ul>
 
           <!--end::Navigation-->
@@ -236,17 +282,17 @@
           <ul class="navi navi-hover navi-active navi-accent py-3">
             <li class="navi-item">
               <a href="/service/register" class="navi-link active" id="navi-search-link-0">
-													<span class="navi-icon">
-														<i class="la la-pen icon-xl"></i>
-													</span>
+                <span class="navi-bullet">
+                  <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;민원 등록</span>
               </a>
             </li>
             <li class="navi-item">
               <a href="service/search" class="navi-link" id="navi-search-link-2">
-													<span class="navi-icon">
-														<i class="la la-search-plus icon-xl"></i>
-													</span>
+                <span class="navi-bullet">
+                  <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;민원 조회</span>
               </a>
             </li>
@@ -254,21 +300,21 @@
             <li class="navi-header font-weight-bolder text-uppercase font-size-md pb-2">근무</li>
             <li class="navi-item" data-toggle="modal" data-target="#serv_sche_modal">
               <a href="javascript:;" class="navi-link">
-													<span class="navi-icon">
-														<i class="la la-calendar icon-xl"></i>
-													</span>
+                <span class="navi-bullet">
+                  <i class="bullet bullet-dot"></i>
+                </span>
                 <span class="navi-text">&nbsp;비상근무 편성</span>
               </a>
             </li>
-<!--            <li class="navi-item">-->
-<!--              <form class="px-4 py-3">-->
-<!--                <div class="input-icon">-->
-<!--                  <input type="text" class="form-control" placeholder=""/>-->
-<!--                  <span><i class="la la-flash icon-lg"></i></span>-->
-<!--                </div>-->
-<!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
-<!--              </form>-->
-<!--            </li>-->
+            <!--            <li class="navi-item">-->
+            <!--              <form class="px-4 py-3">-->
+            <!--                <div class="input-icon">-->
+            <!--                  <input type="text" class="form-control" placeholder=""/>-->
+            <!--                  <span><i class="la la-flash icon-lg"></i></span>-->
+            <!--                </div>-->
+            <!--                <span class="form-text text-muted">민원인, 연락처 등으로 검색합니다</span>-->
+            <!--              </form>-->
+            <!--            </li>-->
           </ul>
 
           <!--end::Navigation-->
@@ -292,14 +338,14 @@
       <!--end::Quick panel-->
 
       <!--begin::User-->
-<!--      <div class="topbar-item">-->
-<!--        <button type="button"-->
-<!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
-<!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
-<!--                data-offset="0,10">-->
-<!--          사용자-->
-<!--        </button>-->
-<!--      </div>-->
+      <!--      <div class="topbar-item">-->
+      <!--        <button type="button"-->
+      <!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
+      <!--                data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"-->
+      <!--                data-offset="0,10">-->
+      <!--          사용자-->
+      <!--        </button>-->
+      <!--      </div>-->
 
       <!--end::User-->
 
