--- a/tools/webpack/webgis/views/partials/_modal/_ol-info.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-info.html
@@ -1,5 +1,5 @@
 <!--begin::Chat Panel-->
-<div class="modal modal-sticky modal-sticky-bottom-right" id="kt_chat_modal" role="dialog" data-backdrop="false">
+<div class="modal fade modal-sticky modal-sticky-bottom-right" id="kt_chat_modal" role="dialog" data-backdrop="false">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <!--begin::Card-->
